changed background color, added twitch embedd, testing embedd

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <title>My Personal Website</title>
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <script src="./script.js"></script>
+    <h1>Welcome to the stream!</h1>
+    <iframe 
+        src="https://player.twitch.tv/?channel=secretasianman69&parent=https://rjunhoa.github.io/my-personal-website/" 
+        frameborder="0" 
+        allowfullscreen="true" 
+        scrolling="no" 
+        height="378" 
+        width="620">
+    </iframe>
+
   </body>
 </html>
