--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Welcome to the stream!</h1>
     <iframe 
-        src="https://player.twitch.tv/?channel=secretasianman69&parent=https://rjunhoa.github.io/my-personal-website/" 
+        src="https://player.twitch.tv/?channel=secretasianman69&parent=www.rjunhoa.github.io/my-personal-website/" 
         frameborder="0" 
         allowfullscreen="true" 
         scrolling="no" 
